[package]
name = "parallel_lz77"
version = "0.1.0"
authors = ["Hunter Herman <hherman1@macalester.edu>"]

[dependencies]
rayon = "0.9.0"
suffix = "1.0.0"
saxx = "0.1.2"
clap = "2.29.0"
lazy_static = "1.0.0"
ansi_term = "0.10.2"

[dev-dependencies]
quickcheck = "0.5.0"
quickcheck_macros = "0.5.0"
rand = "0.4.1"
